[package]
name = "weaver"
version = "0.1.0"
edition = "2021"

[dependencies]
colorutils-rs = "0.7.5"
half = { version = "2.4.1", features = ["num-traits", "default"] }
num-traits = "0.2.19"
pic-scale = { version = "0.6.8", default-features = false}
rayon = "1.10.0"

[features]
arm_set = ["pic-scale/nightly_i8mm", "pic-scale/rdm"]

[build-dependencies]
cbindgen = "0.29.0"

[lib]
crate-type = ["staticlib"]

[profile.release]
lto = true
codegen-units = 1